[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luisa-python-lang"
description = "A New DSL Frontend for LuisaCompute"
version = "0.1"
requires-python = ">=3.12"
dependencies = ["sourceinspect", "typing-extensions", "pytest"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["luisa_lang*"]

[tool.setuptools.package-data]
luisa_lang = ["py.typed"]

[[tool.mypy.overrides]]
module = ["luisa_lang"]
ignore_missing_imports = true